[package]
name = "chiprust8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
simple-error = "0.2.3"
byteorder = "1.4.3"
rand = "0.8.4"
env_logger = "0.9.0"
log = "0.4.14"
simple_logger = "1.16.0"
bitvec = "0.22.3"
crossbeam = "0.8.1"
eframe = "0.16.0" # Gives us egui, epi and web+native backends